--- a/Q&A.html
+++ b/Q&A.html
@@ -20,9 +20,9 @@
                     <a href="Contact.html"><p>ㅈㅈㅈㅈ 와 소통하기</p></a>
                 </div>
                 <div class="blank"></div>
-                <div class="menu"><p>지구인들의 작업실</p></div>
+                <div class="menu"><p id="menu">지구인들의 작업실</p></div>
                 <div class="notice">
-                    <p>
+                    <p id="menu">
                         <a href="Notice.html">공지사항</a> ㅣ
                         <a href="Review.html">후기</a> ㅣ
                         <a href="Q&A.html">질문 및 답변</a>
