--- a/About.html
+++ b/About.html
@@ -14,10 +14,10 @@
             <div class="basemenu">
                 <div class="left">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
-                    <a href="About.html"><p>ㅈㅈㅈㅈ 란?</p></a>
-                    <a href="Program.html"><p>프로그램</p></a>
-                    <a href="Goods.html"><p>굿즈</p></a>
-                    <a href="Contact.html"><p>ㅈㅈㅈㅈ 와 소통하기</p></a>
+                    <a href="About.html"><p>ABOUT</p></a>
+                    <a href="Program.html"><p>PROGRAM</p></a>
+                    <a href="Contact.html"><p>CONTACT</p></a>
+                    <a href="Goods.html"><p>GOODS</p></a>
                 </div>
                 <div class="blank"></div>
                 <div class="menu"><p id="menu">지구인들의 작업실</p></div>
@@ -34,26 +34,23 @@
                 <div class="Emty1"></div>
                 <div class="Emty2">
                     <div class="AboutPict">
-                        <div class="pic" id="Aboutpict1"></div>
-                        <div class="text0">
-                            <p>
-                                동해물과 백두산이 마르고 닳도록 하느님이 보우아사 우리나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이보전하세
+                        <div class="pic" id="Aboutpict1">
+                            <p class="text0">
+                                당신은 커피의 취향에 대해 얼마나 알고 있나요?
                             </p>
                         </div>
                     </div>
                     <div class="AboutPict">
-                        <div class="pic" id="Aboutpict2"></div>
-                        <div class="text0">
-                            <p>
-                                동해물과 백두산이 마르고 닳도록 하느님이 보우아사 우리나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이보전하세
+                        <div class="pic" id="Aboutpict2">
+                            <p class="text0">
+                                한 사람의 인생에 대해 얼마나 생각해 보셨나요?
                             </p>
                         </div>
                     </div>
                     <div class="AboutPict">
-                        <div class="pic" id="Aboutpict3"></div>
-                        <div class="text0">
-                            <p>
-                                동해물과 백두산이 마르고 닳도록 하느님이 보우아사 우리나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이보전하세
+                        <div class="pic" id="Aboutpict3">
+                            <p class="text0">
+                                우리 지구의 미래는 어떻게 될까요? 변할까요?
                             </p>
                         </div>
                     </div>
