--- a/Contact.html
+++ b/Contact.html
@@ -14,10 +14,10 @@
             <div class="basemenu">
                 <div class="left">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
-                    <a href="About.html"><p>ㅈㅈㅈㅈ 란?</p></a>
-                    <a href="Program.html"><p>프로그램</p></a>
-                    <a href="Goods.html"><p>굿즈</p></a>
-                    <a href="Contact.html"><p>ㅈㅈㅈㅈ 와 소통하기</p></a>
+                    <a href="About.html"><p>ABOUT</p></a>
+                    <a href="Program.html"><p>PROGRAM</p></a>
+                    <a href="Contact.html"><p>CONTACT</p></a>
+                    <a href="Goods.html"><p>GOODS</p></a>
                 </div>
                 <div class="blank"></div>
                 <div class="menu"><p id="menu">지구인들의 작업실</p></div>
@@ -32,8 +32,8 @@
             <div class="list" id="Contact">
                 <div class="Contact">
                     <ul>
-                        <li id="contct">카톡 ID : 이아무개</li>
-                        <li id="contct">Tel : 010 - 1234 - 5678</li>
+                        <li id="contct">카톡 ID : yeonhello1</li>
+                        <li id="contct">Tel : 010 - 5721 - 3886</li>
                         <li id="contct">instargram : geegooin.1</li>
                     </ul>
                 </div>
