--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             <div class="basemenu">
                 <div class="left">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
-                    <a href="About.html"><p>ㅈㅈㅈㅈ 란?</p></a>
-                    <a href="Program.html"><p>프로그램</p></a>
-                    <a href="Goods.html"><p>굿즈</p></a>
-                    <a href="Contact.html"><p>ㅈㅈㅈㅈ 와 소통하기</p></a>
+                    <a href="About.html"><p>ABOUT</p></a>
+                    <a href="Program.html"><p>PROGRAM</p></a>
+                    <a href="Contact.html"><p>CONTACT</p></a>
+                    <a href="Goods.html"><p>GOODS</p></a>
                 </div>
                 <div class="blank"></div>
-                <div class="menu"><p>지구인들의 작업실</p></div>
+                <div class="menu"><p id="menu">지구인들의 작업실</p></div>
                 <div class="notice">
-                    <p>
+                    <p id="menu">
                         <a href="Notice.html">공지사항</a> ㅣ
                         <a href="Review.html">후기</a> ㅣ
                         <a href="Q&A.html">질문 및 답변</a>
