--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 
 <html>
     <head>
-        <title>ㅈㅈㅈㅈ 홈</title>
+        <title>공지사항</title>
         <meta charset="utf-8">
         <link href="css/scroll.css" rel=stylesheet>
         <link href="css/main.css" rel=stylesheet>
+        <link href="css/Notice.css" rel=stylesheet>
     </head>
     
     <body>
-        <div class="Container">
+        <div class=Container>
             <div class="basemenu">
                 <div class="left">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
@@ -28,9 +29,11 @@
                     </p>
                 </div>
             </div>
-            <div class="list" id="NO1"></div>
-            <div class="list" id="NO2"></div>
-            <div class="list" id="NO3"></div>
+            <div class="list" id="Notice">
+                <div class="Notice">
+                    <p id="Notice1">공지사항</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
