--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
                     <a href="Goods.html"><p>GOODS</p></a>
                 </div>
                 <div class="blank"></div>
-                <div class="menu"><p id="menu">지구인들의 작업실</p></div>
+                <div class="menu"><p id="menu">젊은 지구인들의 자유로운 작업실</p></div>
                 <div class="notice">
                     <p id="menu">
                         <a href="Notice.html">공지사항</a> ㅣ
