--- a/Contact.html
+++ b/Contact.html
@@ -23,9 +23,9 @@
                 <div class="menu"><p id="menu">젊은 지구인들의 자유로운 작업실</p></div>
                 <div class="notice">
                     <p id="menu">
-                        <a href="Notice.html">공지사항</a> ㅣ
-                        <a href="Review.html">후기</a> ㅣ
-                        <a href="Q&A.html">질문 및 답변</a>
+                        <a href="Notice.html" class="topmenu">공지사항 ㅣ</a>
+                        <a href="Review.html" class="topmenu">후기 ㅣ</a>
+                        <a href="Q&A.html" class="topmenu">질문 및 답변</a>
                     </p>
                 </div>
             </div>
