--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="Container">
             <div class="basemenu">
-                <div class="left">
+                <div class="leftmenu">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
                     <a href="About.html"><p>ABOUT</p></a>
                     <a href="Program.html"><p>PROGRAM</p></a>
