--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="basemenu">
                 <div class="leftmenu">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
-                    <a href="About.html"><p>ABOUT</p></a>
-                    <a href="Program.html"><p>PROGRAM</p></a>
-                    <a href="Contact.html"><p>CONTACT</p></a>
-                    <a href="Goods.html"><p>GOODS</p></a>
+                    <a href="About.html" class="leftmenu"><p>ABOUT</p></a>
+                    <a href="Program.html" class="leftmenu"><p>PROGRAM</p></a>
+                    <a href="Contact.html" class="leftmenu"><p>CONTACT</p></a>
+                    <a href="Goods.html" class="leftmenu"><p>GOODS</p></a>
                 </div>
                 <div class="blank"></div>
                 <div class="menu"><p id="menu">젊은 지구인들의 자유로운 작업실</p></div>
