--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 
 <html>
     <head>
-        <title>ㅈㅈㅈㅈ 홈</title>
+        <title>ㅈㅈㅈㅈ 란?</title>
         <meta charset="utf-8">
         <link href="css/scroll.css" rel=stylesheet>
         <link href="css/main.css" rel=stylesheet>
+        <link href="css/About.css" rel=stylesheet>
     </head>
     
     <body>
-        <div class="Container">
+        <div class=Container>
             <div class="basemenu">
-                <div class="leftmenu">
+                <div class="left">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
-                    <a href="About.html" class="leftmenu"><p>ABOUT</p></a>
-                    <a href="Program.html" class="leftmenu"><p>PROGRAM</p></a>
-                    <a href="Contact.html" class="leftmenu"><p>CONTACT</p></a>
-                    <a href="Goods.html" class="leftmenu"><p>GOODS</p></a>
+                    <a href="About.html"><p>ABOUT</p></a>
+                    <a href="Program.html"><p>PROGRAM</p></a>
+                    <a href="Contact.html"><p>CONTACT</p></a>
+                    <a href="Goods.html"><p>GOODS</p></a>
                 </div>
                 <div class="blank"></div>
                 <div class="menu"><p id="menu">젊은 지구인들의 자유로운 작업실</p></div>
                 <div class="notice">
                     <p id="menu">
-                        <a href="Notice.html" class="topmenu">공지사항 ㅣ</a>
-                        <a href="Review.html" class="topmenu">후기 ㅣ</a>
-                        <a href="Q&A.html" class="topmenu">질문 및 답변</a>
+                        <a href="Notice.html">공지사항</a> ㅣ
+                        <a href="Review.html">후기</a> ㅣ
+                        <a href="Q&A.html">질문 및 답변</a>
                     </p>
                 </div>
             </div>
