--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>ㅈㅈㅈㅈ 란?</title>
+        <title>ㅈㅈㅈㅈ 홈</title>
         <meta charset="utf-8">
         <link href="css/scroll.css" rel=stylesheet>
         <link href="css/main.css" rel=stylesheet>
