--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="basemenu">
                 <div class="left">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
-                    <a href="About.html"><p>ABOUT</p></a>
-                    <a href="Program.html"><p>PROGRAM</p></a>
-                    <a href="Contact.html"><p>CONTACT</p></a>
-                    <a href="Goods.html"><p>GOODS</p></a>
+                    <a href="About.html"><p class="LeftText">ABOUT</p></a>
+                    <a href="Program.html"><p class="LeftText">PROGRAM</p></a>
+                    <a href="Contact.html"><p class="LeftText">CONTACT</p></a>
+                    <a href="Goods.html"><p class="LeftText">GOODS</p></a>
                 </div>
                 <div class="blank"></div>
                 <div class="menu"><p id="menu">젊은 지구인들의 자유로운 작업실</p></div>
@@ -35,3 +35,4 @@
         </div>
     </body>
 </html>
+
