--- a/About.html
+++ b/About.html
@@ -14,18 +14,18 @@
             <div class="basemenu">
                 <div class="left">
                     <a href="index.html"><img src="img/logo.png" class="imglogo"></a>
-                    <a href="About.html"><p>ABOUT</p></a>
-                    <a href="Program.html"><p>PROGRAM</p></a>
-                    <a href="Contact.html"><p>CONTACT</p></a>
-                    <a href="Goods.html"><p>GOODS</p></a>
+                    <a href="About.html"><p class="LeftText">ABOUT</p></a>
+                    <a href="Program.html"><p class="LeftText">PROGRAM</p></a>
+                    <a href="Contact.html"><p class="LeftText">CONTACT</p></a>
+                    <a href="Goods.html"><p class="LeftText">GOODS</p></a>
                 </div>
                 <div class="blank"></div>
                 <div class="menu"><p id="menu">젊은 지구인들의 자유로운 작업실</p></div>
                 <div class="notice">
                     <p id="menu">
-                        <a href="Notice.html" class="topmenu">공지사항 ㅣ</a>
-                        <a href="Review.html" class="topmenu">후기 ㅣ</a>
-                        <a href="Q&A.html" class="topmenu">질문 및 답변</a>
+                        <a href="Notice.html">공지사항</a> ㅣ
+                        <a href="Review.html">후기</a> ㅣ
+                        <a href="Q&A.html">질문 및 답변</a>
                     </p>
                 </div>
             </div>
