--- a/About.html
+++ b/About.html
@@ -36,21 +36,21 @@
                     <div class="AboutPict">
                         <div class="pic" id="Aboutpict1">
                             <p class="text0">
-                                당신은 커피의 취향에 대해 얼마나 알고 있나요?
+                                당신의<br> 커피의 취향에 대해<br> 얼마나 알고 있나요?
                             </p>
                         </div>
                     </div>
                     <div class="AboutPict">
                         <div class="pic" id="Aboutpict2">
                             <p class="text0">
-                                한 사람의 인생에 대해 얼마나 생각해 보셨나요?
+                                한 사람의<br> 인생에 대해 얼마나<br> 생각해 보셨나요?
                             </p>
                         </div>
                     </div>
                     <div class="AboutPict">
                         <div class="pic" id="Aboutpict3">
                             <p class="text0">
-                                우리 지구의 미래는 어떻게 될까요? 변할까요?
+                                우리 지구의 미래는<br> 어떻게 될까요?<br> 변할까요?
                             </p>
                         </div>
                     </div>
