--- a/index.html
+++ b/index.html
@@ -29,9 +29,21 @@
                     </p>
                 </div>
             </div>
-            <div class="list" id="NO1"></div>
-            <div class="list" id="NO2"></div>
-            <div class="list" id="NO3"></div>
+            <div class="list" id="NO1">
+                <div class="center" id="center1">
+                    <p class="centertext">젊은 지구인들이 도전의 자유를 누리다.</p>
+                </div>
+            </div>
+            <div class="list" id="NO2">
+                <div class="center" id="center2">
+                    <p class="centertext">생각의 자유를 누리다.</p>
+                </div>
+            </div>
+            <div class="list" id="NO3">
+                <div class="center" id="center3">
+                    <p class="centertext">우주를 깜짝 놀라게 하다!</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
