--- a/Program.html
+++ b/Program.html
@@ -36,23 +36,23 @@
                    
                     <div class="program2-1">
                       <div class="imgbox">
-                        <span><img src="img/p1.jpg" class="img"></span>
-                        <p class="arrow_box">숫자로 알아보는 당신의 현재와 미래</p>
-                        <p class="text">수비학</p>
+                        <span><img src="img/p8.jpg" class="img"></span>
+                        <p class="arrow_box">앞으로의 미래, 왜 코딩인가?<br> 코딩의 중요성과<br> 당신의 미래를 위한 시간</p>
+                        <p class="text">코딩</p>
                       </div>
                       <div class="imgbox">
-                        <span><img src="img/p2.jpg" class="img"></span>
-                        <p class="arrow_box">정통 사주로 알아보는 당신의 과거와 현재 그리고 미래</p>
-                        <p class="text">사주</p>
+                        <span><img src="img/p7.jpg" class="img"></span>
+                        <p class="arrow_box">이제는 크리에이터의 시대다. 직접 영상을 촬영해보고<br> 제작까지 해보는 시간</p>
+                        <p class="text">영상제작</p>
                       </div>
                       <div class="imgbox">
                         <span><img src="img/p3.jpg" class="img"></span>
-                        <p class="arrow_box">미술사로 알아보는 한 화가의 작품과 그의 일상</p>
+                        <p class="arrow_box">미술사로 알아보는 <br>한 화가의 작품과 그의 일상</p>
                         <p class="text">미술</p>
                       </div>
                       <div class="imgbox">
                         <span><img src="img/p4.jpg" class="img"></span>
-                        <p class="arrow_box">커피의 역사를 알아보고, 직접 커피를 내려보는 시간</p>
+                        <p class="arrow_box">커피의 역사를 알아보고, <br>직접 커피를 내려보는 시간</p>
                         <p class="text">커피</p>
                       </div>
                     </div>
@@ -60,23 +60,23 @@
                     <div class="program2-1">
                       <div class="imgbox">
                         <span><img src="img/p5.jpg" class="img"></span>
-                        <p class="arrow_box">동양인과 서양인의 차이는 무엇일까?</p>
+                        <p class="arrow_box" id=arrow1>동양인과 서양인의 <br>차이는 무엇일까?</p>
                         <p class="text">동양/서양</p>
                       </div>
                       <div class="imgbox">
                         <span><img src="img/p6.jpg" class="img"></span>
-                        <p class="arrow_box">동양과 서양의 언어의 발달에 미친 영향은 무엇일까?</p>
+                        <p class="arrow_box">동양과 서양의 언어의 발달에 <br>미친 영향은 무엇일까?</p>
                         <p class="text">영어</p>
                       </div>
                       <div class="imgbox">
-                        <span><img src="img/p7.jpg" class="img"></span>
-                        <p class="arrow_box">이제는 크리에이터의 시대다. 직접 영상을 촬영해보고 제작까지 해보는 시간</p>
-                        <p class="text">영상제작</p>
+                        <span><img src="img/p1.jpg" class="img"></span>
+                        <p class="arrow_box" id=arrow2>숫자로 알아보는<br> 당신의 현재와 미래</p>
+                        <p class="text">수비학</p>
                       </div>
                       <div class="imgbox">
-                        <span><img src="img/p8.jpg" class="img"></span>
-                        <p class="arrow_box">앞으로의 미래는 왜 코딩인가? 코딩의 중요성과 당신의 미래를 위한 시간</p>
-                        <p class="text">코딩</p>
+                        <span><img src="img/p2.jpg" class="img"></span>
+                        <p class="arrow_box" id=arrow3>정통 사주로 알아보는<br> 당신의 과거와 현재 그리고 미래</p>
+                        <p class="text">사주</p>
                       </div>
                     </div>
                     
