--- a/Contact.html
+++ b/Contact.html
@@ -32,8 +32,7 @@
             <div class="list" id="Contact">
                 <div class="Contact">
                     <ul>
-                        <li id="contct">카톡 ID : yeonhello1</li>
-                        <li id="contct">Tel : 010 - 5721 - 3886</li>
+                        <li id="contct">kakao : yeonhello1</li>
                         <li id="contct">instargram : geegooin.1</li>
                     </ul>
                 </div>
