--- a/Goods.html
+++ b/Goods.html
@@ -31,7 +31,7 @@
             </div>
             <div class="list" id="GoodsReady">
                 <div class="GoodsReady">
-                    <p id="GoodsReady1">준비중 . . .</p>
+                    <p>준비중</p>
                 </div>
             </div>
         </div>
