--- a/Program3.html
+++ b/Program3.html
@@ -8,6 +8,7 @@
         <link href="css/main.css" rel=stylesheet>
         <link href="css/Program.css" rel=stylesheet>
         <link href="css/Program1.css" rel=stylesheet>
+        <link href="css/Program3.css" rel=stylesheet>
     </head>
     
     <body>
