--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:image" content="img/logo1.png">
-        <title>G4 Renew</title>
+        <title>ABOUT</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
+        <link href="css/about.css" rel="stylesheet">
     </head>
 
     <body>
@@ -36,7 +36,7 @@
             class="navbar fixed-top navbar-light"
             style="width: 100%; height: 100px;"
             id="PcNav">
-            <div class="container-fluid" style="color: white;">
+            <div class="container-fluid" style="color: white; ">
                 <a href="index.html">
                     <img
                         src="img/logo.png"
@@ -99,28 +99,38 @@
             </div>
         </div>
 
-        <!-- PC backgroundimg -->
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="3000">
-                <img src="img/space7.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="img/space8.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="img/space9.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-          </div>
-          
+        <!-- about contents -->
+        <div class="bgc">
+            <div class="row p-5" id="contents">
+                <div class="col-sm-4 mb-3">
+                    <div class="card-body" id="cardimg1">
+                        <div class="imgtext">
+                            <p>당신의<br>
+                                커피의 취향에 대해<br>
+                                얼마나 알고 있나요?</p>
+                        </div>
+                    </div>
+                </div>
 
-        <!-- Mobile backgroundimg -->
-        <div class="bg" id="box4">
-            <div class="Mainmessage">
-                <p>다양한 문화생활 체험을 통해</p>
-                <p>다양한 환경의 사람을 만나고</p>
-                <p>다양한 즐거움을 즐기며 살자</p>
+                <div class="col-sm-4 mb-3">
+                    <div class="card-body" id="cardimg2">
+                        <div class="imgtext">
+                            <p>한 사람의<br>
+                                인생에 대해 얼마나<br>
+                                생각해 보셨나요?</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4 mb-3 mb-sm-0">
+                    <div class="card-body" id="cardimg3">
+                        <div class="imgtext">
+                            <p>우리 지구의 미래는<br>
+                                어떻게 될까요?<br>
+                                변할까요?</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
