--- a/goods.html
+++ b/goods.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:image" content="img/logo1.png">
-        <title>G4 Renew</title>
+        <title>GOODS</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
+        <link href="css/about.css" rel="stylesheet">
+        <link href="css/goods.css" rel="stylesheet">
     </head>
 
     <body>
@@ -36,7 +37,7 @@
             class="navbar fixed-top navbar-light"
             style="width: 100%; height: 100px;"
             id="PcNav">
-            <div class="container-fluid" style="color: white;">
+            <div class="container-fluid" style="color: white; ">
                 <a href="index.html">
                     <img
                         src="img/logo.png"
@@ -99,28 +100,11 @@
             </div>
         </div>
 
-        <!-- PC backgroundimg -->
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="3000">
-                <img src="img/space7.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="img/space8.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="img/space9.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-          </div>
-          
+        <!-- goods -->
+        <div class="bgc">
+            <div class="goods">
+                <p style="font-size: 40px; color: white;">준비중 입니다....</p>
 
-        <!-- Mobile backgroundimg -->
-        <div class="bg" id="box4">
-            <div class="Mainmessage">
-                <p>다양한 문화생활 체험을 통해</p>
-                <p>다양한 환경의 사람을 만나고</p>
-                <p>다양한 즐거움을 즐기며 살자</p>
             </div>
         </div>
 
